# symbolix

./: .gitignore  Cargo.toml  LICENSE  README.md  grammar.ebnf
.zed/: debug.json  tasks.json
documents/: Exprion Core Comprehensive Test Cases.md  Symbolix Core Comprehensive Test Cases.md  与 SymPy 运行性能比较说明文档.md  性能优化文档.md
examples/: facade.rs  main.rs
exprion-api/: Cargo.toml
exprion-api/examples/: equation.rs  jit.rs
exprion-api/src/: convert.rs  equation.rs  expr.rs  jit.rs  lib.rs  ops.rs  scope.rs  var.rs
exprion-api/tests/: api.rs
exprion-compile/: Cargo.toml
exprion-compile/examples/: formula.rs  rust_analyse.rs
exprion-compile/src/: cache.rs  codegen.rs  expand.rs  lib.rs  rust_expr.rs
exprion-compile/tests/: compile_fail.rs  test_cache.rs  test_exprion.rs  test_formula.rs
exprion-core/: Cargo.toml
exprion-core/examples/: equation.rs  error.rs  pipeline.rs
exprion-core/src/: lib.rs  macros.rs
exprion-core/tests/: test_buckets.rs  test_constants.rs  test_context.rs  test_equation.rs  test_errors.rs  (+17 more)
exprion-engine/: Cargo.toml  build.rs
perf-harness/: Cargo.toml  perf_cases_01.toml  perf_cases_02.toml
src/: lib.rs  macros.rs  main.rs
symbolix-compile/: Cargo.toml
symbolix-compile/examples/: compile.rs  main.rs  rust_analyse.rs
symbolix-compile/src/: cache.rs  codegen.rs  expand.rs  lib.rs  rust_expr.rs
symbolix-compile/tests/: compile_fail.rs  test_cache.rs  test_formula.rs  test_symbolix.rs
symbolix-core/: Cargo.toml
tests/: test_compile.rs  test_expr_create.rs  test_lexer.rs  test_parser.rs  test_semantic.rs
(+139 files in other folders)
