[workspace]
members = ["exprion-core", "exprion-compile", "exprion-engine"]

[package]
name = "exprion"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
exprion-core = { path = "./exprion-core" }
exprion-compile = { path = "./exprion-compile" }
exprion-engine = { path = "./exprion-engine" }
